--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,6 +62,7 @@ img {
   width: 90%;
   height: 90%;
   padding: 25px;
+  overflow: auto;
 }
 
 body {
@@ -167,6 +168,10 @@ input:focus {
   outline: 0;
 }
 
+.arredar {
+  display: none;
+}
+
 @media screen and (max-width: 950px) {
   .menu nav {
     display: flex;
@@ -178,6 +183,20 @@ input:focus {
 
   #personalizar {
     height: 40px;
+  }
+}
+
+@media screen and (max-height: 750px) {
+  .container {
+    overflow: auto;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .arredar {
+    display: block;
+    text-align: center;
+    color: var(--other-font-color);
   }
 }
 
