--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,6 +62,7 @@ img {
   width: 90%;
   height: 90%;
   padding: 25px;
+  overflow: auto;
 }
 
 body {
@@ -167,6 +168,10 @@ input:focus {
   outline: 0;
 }
 
+.arredar {
+  display: none;
+}
+
 @media screen and (max-width: 950px) {
   .menu nav {
     display: flex;
@@ -181,6 +186,14 @@ input:focus {
   }
 }
 
+@media screen and (max-width: 770px) {
+  .arredar {
+    display: block;
+    text-align: center;
+    color: var(--other-font-color);
+  }
+}
+
 @media screen and (min-width: 770px) and (max-width: 950px) {
   .menu nav {
     align-items: center;
@@ -191,9 +204,5 @@ input:focus {
 @media screen and (max-width: 420px) {
   .area{
     flex-direction: column;
-  }
-
-  .container {
-    overflow: auto;
   }
 }
