--- a/CSS/agenda.css
+++ b/CSS/agenda.css
@@ -17,13 +17,13 @@
 
 .container2 {
   position: relative;
-  /* width: 100%; */
-  height: 69vh;
+  /* width: 100%;
+  height: 69vh; */
   margin: 0 auto;
   /* padding: 5px; */
   color: #fff;
   display: flex;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   background-color: var(--primary-clr);
 }
 
@@ -36,10 +36,10 @@
   position: relative;
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
+  display: block;
+  /* flex-direction: column;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-between; */
   color: #878895;
   border-radius: 5px;
   background-color: #fff;
@@ -67,6 +67,7 @@
 
 .calendar .month {
   width: 100%;
+  height: 90px;
   margin-top: 30px;
   display: flex;
   align-items: center;
