--- a/CSS/programacao.css
+++ b/CSS/programacao.css
@@ -91,27 +91,7 @@
   transition: transform 0.3s ease-in-out;
 }
 
-.seta.virada {
-  transform: rotate(180deg);
-}
-
-.seta1.virada {
-  transform: rotate(180deg);
-}
-
-.seta2.virada {
-  transform: rotate(180deg);
-}
-
-.seta3.virada {
-  transform: rotate(180deg);
-}
-
-.seta4.virada {
-  transform: rotate(180deg);
-}
-
-.seta5.virada {
+.virada {
   transform: rotate(180deg);
 }
 
