--- a/CSS/agenda.css
+++ b/CSS/agenda.css
@@ -111,7 +111,7 @@
 
 .calendar .days {
   width: 405px;
-  height: 300px;
+  /* height: 300px; */
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
